--- a/Assignment/web-degine.html
+++ b/Assignment/web-degine.html
@@ -51,7 +51,22 @@
                    <h4>Pink Flower Tree</h4>
                    <h4>Pink Flower Tree</h4>
                 </div>
+                <div>
+                    <div class="main-bg-color">
+                        <h1 class="text-padding" >Hot Deal ! Sale Up To 25% <span class="color">Off</span></h1>
 
+                        <p class="right-text-padding" >It is a long established fact that a reader will be distracted by the readable<br>content of a page when looking at its layout.</p>
+                            <div class="btn-scend">
+                                <button type="Sign Up" class="btn-all">Shop Now</button>
+                            
+                            </div> 
+                            
+                            <div>
+                                <img class="img-right" src="/Flower Asset/pngwing 8.png" style="height: 350px;" alt="">
+                            </div>
+
+                    </div>
+                </div>
 
 
 
