--- a/Assignment/web-degine.html
+++ b/Assignment/web-degine.html
@@ -28,9 +28,11 @@
                 </div>
          </div>
      </header>
+     <!-- main section -->
     <main>
         <div>
-            <div>
+            <div> 
+                <!-- frist section -->
                 <div class="display-flex">
                     <h1>Our Featured Flowers</h1>
                     <p class="text-centar">It is a long established fact that a reader will be distracted by the readable<br> content of a page when looking at its layout.</p>
@@ -104,7 +106,7 @@
          </div>
 
     </main>
-    <!-- button-style -->
+    <!-- fotter-desgin -->
     <footer>
         <div>
             <div class="fotter-desgin">
@@ -112,8 +114,6 @@
                 <p class="paragharf">It is a long established fact that a reader will be distracted by the readable
                    <p class="paragharf-two"> content of a page when looking at its layout</p>
                     <p class="paragharf-three">@2020-2023, FlowerShop.com. All rights reserved. </p>
-
-
 
 
             </div>
